--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-player": "^2.12.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-slick": "^0.29.0",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
