--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-intersection-observer": "^9.5.2",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.2",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^10.0.4"
   },
   "devDependencies": {
